CORRECTION: move code in style.css in sass folder, the code is divise in partials

--- a/P3/css/style.css
+++ b/P3/css/style.css
@@ -6,42 +6,18 @@
   font-family: "Roboto", sans-serif;
 }
 
-header {
-  text-align: center;
-}
-
 h1 {
   font-family: "Shrikhand", cursive;
 }
-main {
-  padding: 0px;
-  text-align: center;
-}
-.location{
-  color: black;
-  background-color: lightgray;
-  display: flex;
-  justify-content: center;
-}
-.location i {
-  margin-right: 15px;
-}
-.reservation{
-  background-color: rgb(246, 246, 246);
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-button.explore-resto{
-  color: white;
-  background-color: #9356DC;
-  border: none;
-  border-radius: 10px;
-  padding: 15px;
-  margin-top: 30px;
-}
 
-button.explore-resto:hover{
-  background-color: plum;
+.fonctionnement h2 {
+  margin-bottom: 15px;
+}
+.fonctionnement .container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
 }
 
 .fonctionnement-box {
@@ -78,71 +54,111 @@ button.explore-resto:hover{
 .fonctionnement-box:hover i {
   color: #9356DC;
 }
-.fonctionnement h2 {
+.fonctionnement-box h2 {
   margin-bottom: 15px;
 }
-.fonctionnement .container {
+.fonctionnement-box .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}/*# sourceMappingURL=style.css.map */
+}
 
-/*Carte avec image est nom des restaurants*/
-section.restaurant{
+.restaurant {
   background-color: lightgray;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   padding: 1px;
 }
-section.restaurant h2{
+.restaurant h2 {
   text-align: center;
+}
+.restaurant .container {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
-.restaurant-box{
+.restaurant .restaurant-box {
   background-color: white;
   border-radius: 20px;
   margin: 20px;
   padding: 10px;
-  max-width: 1000px;
+  width: 335px;
 }
-section.restaurant i {
+.restaurant .restaurant-box p {
+  text-align: left;
+}
+.restaurant i {
   color: palevioletred;
 }
-.resto-align-item{
+.restaurant .resto-align-item {
   display: flex;
   justify-content: space-between;
   padding: 5px;
 }
-.restaurant-box p{
-  text-align: left;
+
+header {
+  text-align: center;
 }
+
+h1 {
+  font-family: "Shrikhand", cursive;
+}
+
+main {
+  padding: 0px;
+  text-align: center;
+}
+
+.location {
+  color: black;
+  background-color: lightgray;
+  display: flex;
+  justify-content: center;
+}
+.location i {
+  margin-right: 15px;
+}
+
+.reservation {
+  background-color: rgb(246, 246, 246);
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+button.explore-resto {
+  color: white;
+  background-color: #9356DC;
+  border: none;
+  border-radius: 10px;
+  padding: 15px;
+  margin-top: 30px;
+}
+button.explore-resto:hover {
+  background-color: plum;
+}
+
 /*Pied de page*/
-footer{
+footer {
   color: white;
   background-color: black;
 }
-footer h2{
+footer h2 {
   font-family: "Shrikhand", cursive;
   margin-left: 15px;
   padding-bottom: 15px;
 }
-footer p{
+footer p {
   margin-left: 15px;
   text-align: left;
 }
-.footerLineWithIcon{
+footer .footerLineWithIcon {
   margin-left: 15px;
   display: flex;
 }
 
-/*Format téléphone*/
-@media screen and (max-width: 768px) {
-  section.restaurant{
-    flex-direction: column;
+@media screen and (min-width: 768px) {
+  .fonctionnement .fonctionnement-box {
+    margin-inline: 15px;
   }
-  section.restaurant h2{
-    text-align: left;
-  }  
-
-}
+}/*# sourceMappingURL=style.css.map */
