--- a/P3/sass/_fonctionnement.scss
+++ b/P3/sass/_fonctionnement.scss
@@ -1,5 +1,16 @@
+.fonctionnement {
+    h2 {
+        margin-bottom: 15px;
+    }
 
-.fonctionnement-box{
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: center;
+    }
+}
+.fonctionnement-box {
     color: black;
     background-color: rgb(246, 246, 246);
     display: flex;
@@ -10,28 +21,39 @@
     position: relative;
     margin-bottom: 20px;
     margin-left: 15px;
-    span{
+    span {
         display: block;
         height: 25px;
         width: 25px;
         border-radius: 50%;
-        background-color: $primaire;
+        background-color: #9356DC;
         font-size: 13px;
         color: white;
         text-align: center;
         padding: 5px;
-    
         margin-left: -12px;
     }
-    i{
+
+    i {
         color: rgb(126, 126, 126);
         margin-inline: 15px;
     }
-    &:hover{
+
+    &:hover {
         background-color: rgb(245, 237, 255);
-        i{
-            color: $primaire;
+
+        i {
+            color: #9356DC;
         }
     }
-    
+
+    h2 {
+        margin-bottom: 15px;
+    }
+
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
