--- a/P3/sass/style.scss
+++ b/P3/sass/style.scss
@@ -1,32 +1,86 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Shrikhand&display=swap');
 
-$primaire:#9356DC; 
-$secondaire: #FF79DA; 
+$primaire: #9356DC;
+$secondaire: #FF79DA;
 $tertiaire: #99E2D0;
 
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
 
-h1{
-    font-family: 'Shrikhand', cursive;    
+h1 {
+    font-family: 'Shrikhand', cursive;
 }
 
-main{
-    padding: 15px
+//@import './components';
+@import './fonctionnement';
+@import './restaurant';
+
+header {
+    text-align: center;
 }
 
-@import './components';
+h1 {
+    font-family: "Shrikhand", cursive;
+}
 
-.fonctionnement{
-    h2{
-        margin-bottom: 15px;
+main {
+    padding: 0px;
+    text-align: center;
+}
+
+.location {
+    color: black;
+    background-color: lightgray;
+    display: flex;
+    justify-content: center;
+
+    i {
+        margin-right: 15px;
     }
-    .container{
+}
+
+.reservation {
+    background-color: rgb(246, 246, 246);
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+button.explore-resto {
+    color: white;
+    background-color: #9356DC;
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    margin-top: 30px;
+
+    &:hover {
+        background-color: plum;
+    }
+}
+
+/*Pied de page*/
+footer {
+    color: white;
+    background-color: black;
+
+    h2 {
+        font-family: "Shrikhand", cursive;
+        margin-left: 15px;
+        padding-bottom: 15px;
+    }
+
+    p {
+        margin-left: 15px;
+        text-align: left;
+    }
+
+    .footerLineWithIcon {
+        margin-left: 15px;
         display: flex;
-        flex-wrap: wrap;
     }
 }
+
+@import './tablette';
