--- a/P3/sass/_restaurant.scss
+++ b/P3/sass/_restaurant.scss
@@ -16,8 +16,18 @@
         background-color: white;
         border-radius: 20px;
         margin: 20px;
-        padding: 10px;
         width: 335px;
+        overflow: hidden;
+        position: relative;
+        img {
+            //border-radius: 20px 20px 0px 0px;
+            width: 100%;
+            height: 175px;
+            object-fit: cover;
+        }
+        .restaurant-text{
+            padding: 10px;
+        }
         p {
             text-align: left;
         }
@@ -30,6 +40,13 @@
     .resto-align-item {
         display: flex;
         justify-content: space-between;
+    }
+    span {
+        background-color: rgb(153, 226, 208);
+        color: rgb(57, 169, 142);
         padding: 5px;
+        position: absolute;
+        top: 15px;
+        right: 15px;
     }
 }
