--- a/P3/sass/style.scss
+++ b/P3/sass/style.scss
@@ -10,7 +10,10 @@ $tertiaire: #99E2D0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
-
+img {
+    display: block;
+    max-width: 100%;
+}
 h1 {
     font-family: 'Shrikhand', cursive;
 }
