ADD: heart icon conform to the maquet

--- a/P3/sass/style.scss
+++ b/P3/sass/style.scss
@@ -19,8 +19,10 @@ h1 {
 }
 
 //@import './components';
+@import './components/favoris';
 @import './fonctionnement';
 @import './restaurant';
+
 
 header {
     text-align: center;
