--- a/P3/css/style.css
+++ b/P3/css/style.css
@@ -15,6 +15,53 @@ h1 {
   font-family: "Shrikhand", cursive;
 }
 
+.favoris {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  overflow: hidden;
+}
+
+.favoris i {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 20px;
+}
+
+.fa-regular.fa-heart {
+  z-index: 5;
+  transition: opacity 2s linear;
+}
+
+.fa-regular.fa-heart:hover {
+  opacity: 0;
+}
+
+.fa-square-full {
+  z-index: 3;
+}
+
+.fa-solid.fa-heart {
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  z-index: 1;
+  background-image: linear-gradient(#e66465, #9198e5);
+}
+
+.rideau {
+  color: white;
+  height: 15px;
+  transition: all 2s;
+  transition-timing-function: ease-in-out;
+}
+
+.favoris:hover .rideau {
+  top: -22px;
+}
+
 .fonctionnement h2 {
   margin-bottom: 15px;
 }
@@ -102,9 +149,6 @@ h1 {
 }
 .restaurant .restaurant-box p {
   text-align: left;
-}
-.restaurant i {
-  color: palevioletred;
 }
 .restaurant .resto-align-item {
   display: flex;
