--- a/P3/css/style.css
+++ b/P3/css/style.css
@@ -163,6 +163,87 @@ h1 {
   right: 15px;
 }
 
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  overflow: hidden;
+  z-index: 2;
+  display: grid;
+  place-content: center;
+  -webkit-animation: disparaitre 1s;
+          animation: disparaitre 1s;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 5px solid transparent;
+  border-right: 5px solid hotpink;
+  border-left: 5px solid #9356DC;
+  -webkit-animation: rotation 1s ease-in-out infinite;
+          animation: rotation 1s ease-in-out infinite;
+}
+
+@-webkit-keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes disparaitre {
+  0% {
+    opacity: 1;
+    height: 100vh;
+    z-index: 2;
+  }
+  75% {
+    opacity: 0;
+    height: 100vh;
+    z-index: -1;
+  }
+  100% {
+    opacity: 0;
+    height: 0;
+    z-index: -1;
+  }
+}
+@keyframes disparaitre {
+  0% {
+    opacity: 1;
+    height: 100vh;
+    z-index: 2;
+  }
+  75% {
+    opacity: 0;
+    height: 100vh;
+    z-index: -1;
+  }
+  100% {
+    opacity: 0;
+    height: 0;
+    z-index: -1;
+  }
+}
 header {
   text-align: center;
 }
@@ -174,6 +255,10 @@ h1 {
 main {
   padding: 0px;
   text-align: center;
+}
+
+a {
+  all: unset;
 }
 
 .location {
@@ -195,8 +280,9 @@ main {
 button.explore-resto {
   color: white;
   background-color: #9356DC;
+  background: linear-gradient(-10deg, #9356DC 10%, hotpink 60%);
   border: none;
-  border-radius: 10px;
+  border-radius: 15px;
   padding: 15px;
   margin-top: 30px;
 }
