--- a/P3/sass/components/_loader.scss
+++ b/P3/sass/components/_loader.scss
@@ -6,7 +6,7 @@
     height: 100%;
     background-color: rgba(255, 255, 255, 0.5);
     overflow: hidden;
-    z-index: 2;
+    z-index: 6;
     display: grid;
     place-content: center;
     animation: disparaitre 1s;
@@ -21,7 +21,9 @@
     border: 5px solid transparent;
     border-right: 5px solid hotpink;
     border-left: 5px solid #9356DC;
-    animation: rotation 1s ease-in-out infinite;
+    animation-delay: 0s;
+    animation: rotation 1s ease-in-out 5;
+    
 }
 
 @keyframes rotation {
