--- a/P3/sass/style.scss
+++ b/P3/sass/style.scss
@@ -18,6 +18,7 @@ h1 {
 @import './restaurant';
 @import './components/loader';
 @import './restaurantsPages';
+@import './components/footer.scss';
 
 header {
     text-align: center;
@@ -55,40 +56,6 @@ button.explore-resto {
 
     &:hover {
         background-color: plum;
-    }
-}
-
-/*Pied de page*/
-footer {
-    color: white;
-    background-color: black;
-    padding-bottom: 20px;
-
-    h2 {
-        font-family: "Shrikhand", cursive;
-        margin-left: 15px;
-        padding-bottom: 15px;
-    }
-
-    p {
-        margin-left: 15px;
-        text-align: left;
-    }
-
-    .footerLineWithIcon {
-        margin-left: 15px;
-        display: flex;
-    }
-    .footer-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        max-width: 1000px;
-        
-        >p, .footerLineWithIcon {
-            min-width: 330px;
-            margin-top: 10px;
-        }
     }
 }
 
