--- a/P3/sass/restaurants-pages.scss
+++ b/P3/sass/restaurants-pages.scss
@@ -5,6 +5,7 @@
 .rideau {
     color: rgb(246, 246, 246);
 }
+
 header {
     display: flex;
     justify-content: space-between;
@@ -12,11 +13,13 @@ header {
     width: 80%;
     margin: auto;
     max-width: 1000px;
+
     h1 {
         width: 100%;
         text-align: center;
     }
 }
+
 main {
     >img {
         width: 100%;
@@ -24,20 +27,25 @@ main {
         object-fit: cover;
         z-index: -1;
     }
-    .container {
+
+    .menus {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: center;
+        gap: 30px;
         max-width: 1300px;
+        margin: auto;
         margin-top: 20px;
     }
+
     .restaurant-card {
         //z-index: 1;
-        background-color: rgb(246, 246, 246)!important;
+        background-color: rgb(246, 246, 246) !important;
         border-radius: 15px 15px 0px 0px;
         //margin-top: -15px;
         transform: translateY(-30px);
         padding-inline: 15px;
+
         .top-menu {
             display: flex;
             align-items: center;
@@ -45,26 +53,31 @@ main {
             margin: 8px;
             margin-top: 8px;
         }
+
         h2 {
             font-size: 80%;
             font-weight: 400;
             position: relative;
+            margin-bottom: 30px;
+
             &::after {
-                content : "";
-                position : absolute;
-                width : 40px;
-                height : 3px;
+                content: "";
+                position: absolute;
+                width: 40px;
+                height: 3px;
                 background-color: rgb(153, 226, 208);
                 bottom: -5px; //to place it in bottom
                 left: 0;
                 margin-top: 13px;
-              }   
+            }
         }
     }
+
     .card-plat {
         border-radius: 10px;
     }
 }
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -77,7 +90,7 @@ body {
     display: grid;
 }
 
-.card1, .card2 {
+.card-menu {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
@@ -92,36 +105,42 @@ body {
     margin-bottom: 20px;
     animation: step-display 2s ease-in-out;
 }
-.card1:nth-child(1){
+
+.card-menu:nth-child(1) {
     animation: step-display 0.5s ease-in-out;
 }
-.card1:nth-child(2){
+
+.card-menu:nth-child(2) {
     animation: step-display 1s ease-in-out;
 }
-.card1:nth-child(3){
+
+.card-menu:nth-child(3) {
     animation: step-display 1.5s ease-in-out;
 }
 
-.card1 .card-content{
+.card-menu .card-content {
     flex-shrink: 0;
     flex-basis: 442px;
     overflow: hidden;
     transition: all 0.3s ease-out;
+
     .under-dish {
         display: flex;
         justify-content: space-between;
+
         b {
             padding-right: 20px;
         }
     }
 }
+
 p {
-    white-space: nowrap; 
+    white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis; 
+    text-overflow: ellipsis;
 }
 
-.card1 .panel, .card2 .panel{
+.card-menu .panel {
     display: grid;
     place-content: center;
     height: 70px;
@@ -130,50 +149,32 @@ p {
     color: white;
 }
 
-.card1 .panel {
+.card-menu .panel {
     flex-shrink: 0;
-    flex-basis: 150px;
+    flex-basis: 80px;
     transition: right 0.5s ease-in-out;
 }
 
-.card2 {
-    padding-right: 0;
-}
-
-.card2 .card-content{
-    width: 60px;
-    transition: width 0.5s ease-in-out;
-}
-.card2 .panel {
-    width: 0;
-    transition: width 0.5s ease-in-out;
-}
-
-.card2:hover .card-content {
-    width: 290px;
-}
-
-.card2:hover .panel {
-    width: 150px;
-}
-
-.card1 .panel i, .card2 .panel i {
+.card-menu .panel i {
     transform: rotate(180deg);
     transition: transform 0.5s ease-in-out;
     transition-delay: 0.3s;
 }
 
-.card1:hover .card-content {
-    flex-basis: 290px;
+.card-menu:hover .card-content {
+    flex-basis: 250px;
 }
-.card1:hover .panel i, .card2:hover .panel i {
+
+.card-menu:hover .panel i {
     transform: rotate(360deg);
 }
+
 @keyframes step-display {
-    from{
+    from {
         opacity: 0;
     }
-    to{
+
+    to {
         opacity: 1;
     }
 }
