--- a/P3/sass/style.scss
+++ b/P3/sass/style.scss
@@ -17,7 +17,6 @@ h1 {
 @import './fonctionnement';
 @import './restaurant';
 @import './components/loader';
-@import './restaurantsPages';
 @import './components/footer.scss';
 
 header {
@@ -55,7 +54,7 @@ button.explore-resto {
     margin-top: 30px;
 
     &:hover {
-        background-color: plum;
+        background-color: rec;
     }
 }
 
