--- a/css/restaurants-pages.css
+++ b/css/restaurants-pages.css
@@ -142,7 +142,6 @@ main .restaurant-card h2::after {
   position: absolute;
   width: 40px;
   height: 3px;
-  background-color: rgb(153, 226, 208);
   bottom: -5px;
   left: 0;
   margin-top: 13px;
@@ -234,7 +233,7 @@ p {
   place-content: center;
   height: 70px;
   width: 50px;
-  background-color: #4edd95;
+  background-color: red;
   color: white;
 }
 
