--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ h1 {
 .fonctionnement-box {
   color: black;
   background-color: rgb(246, 246, 246);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
   height: 75px;
@@ -85,6 +86,7 @@ h1 {
   position: relative;
   margin-bottom: 20px;
   margin-left: 15px;
+  transition: background-color 0.5s ease-in-out;
 }
 .fonctionnement-box span {
   display: block;
@@ -99,22 +101,15 @@ h1 {
   margin-left: -12px;
 }
 .fonctionnement-box i {
+  transition: color 0.5s ease-in-out;
   color: rgb(126, 126, 126);
   margin-inline: 15px;
 }
 .fonctionnement-box:hover {
-  background-color: rgb(245, 237, 255);
+  background-color: rgb(245, 237, 255) !important;
 }
 .fonctionnement-box:hover i {
   color: #9356DC;
-}
-.fonctionnement-box h2 {
-  margin-bottom: 15px;
-}
-.fonctionnement-box .container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
 }
 
 .restaurant {
@@ -158,8 +153,8 @@ h1 {
 }
 .restaurant span {
   background-color: rgb(153, 226, 208);
-  color: rgb(57, 169, 142);
-  padding: 5px;
+  color: rgb(0, 135, 102);
+  padding: 10px;
   position: absolute;
   top: 15px;
   right: 15px;
@@ -306,9 +301,11 @@ a {
 
 .location {
   color: black;
-  background-color: lightgray;
+  background-color: rgb(234, 234, 234);
+  box-shadow: 10px 10px 13px rgba(50, 50, 50, 0.75);
   display: flex;
   justify-content: center;
+  padding: 15px;
 }
 .location i {
   margin-right: 15px;
@@ -337,4 +334,4 @@ button.explore-resto:hover {
   .fonctionnement .fonctionnement-box {
     margin-inline: 15px;
   }
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=styles.css.map */
