--- a/sass/_fonctionnement.scss
+++ b/sass/_fonctionnement.scss
@@ -10,9 +10,11 @@
         justify-content: center;
     }
 }
+
 .fonctionnement-box {
     color: black;
     background-color: rgb(246, 246, 246);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
     height: 75px;
@@ -21,6 +23,8 @@
     position: relative;
     margin-bottom: 20px;
     margin-left: 15px;
+    transition: background-color 0.5s ease-in-out;
+
     span {
         display: block;
         height: 25px;
@@ -35,25 +39,17 @@
     }
 
     i {
+        transition: color 0.5s ease-in-out;
         color: rgb(126, 126, 126);
         margin-inline: 15px;
     }
 
     &:hover {
-        background-color: rgb(245, 237, 255);
+        background-color: rgb(245, 237, 255) !important;
+        //background-color: red;
 
         i {
             color: #9356DC;
         }
-    }
-
-    h2 {
-        margin-bottom: 15px;
-    }
-
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
     }
 }
