--- a/sass/restaurants-pages.scss
+++ b/sass/restaurants-pages.scss
@@ -65,28 +65,31 @@ main {
                 position: absolute;
                 width: 40px;
                 height: 3px;
-                background-color: rgb(153, 226, 208);
+                //background-color: rgb(153, 226, 208);
                 bottom: -5px; //to place it in bottom
                 left: 0;
                 margin-top: 13px;
             }
         }
-        
+
     }
+
     button.command {
-            color: white;
-            background-color: #9356DC;
-            background: linear-gradient(-10deg, #9356DC 10%, hotpink 60%);
-            border: none;
-            border-radius: 15px;
-            padding: 15px;
-            margin-top: 30px;
-            margin-inline: auto;
-            display: block;
-            &:hover {
-                background-color: rec;
-            }
+        color: white;
+        background-color: #9356DC;
+        background: linear-gradient(-10deg, #9356DC 10%, hotpink 60%);
+        border: none;
+        border-radius: 15px;
+        padding: 15px;
+        margin-top: 30px;
+        margin-inline: auto;
+        display: block;
+
+        &:hover {
+            background-color: rec;
         }
+    }
+
     .card-plat {
         border-radius: 10px;
     }
@@ -159,7 +162,8 @@ p {
     place-content: center;
     height: 70px;
     width: 50px;
-    background-color: #4edd95;
+    background-color: red;
+    //background-color: rgb(153, 226, 208);
     color: white;
 }
 
