--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -7,6 +7,7 @@ img {
     display: block;
     max-width: 100%;
 }
+
 h1 {
     font-family: 'Shrikhand', cursive;
 }
@@ -22,29 +23,37 @@ h1 {
 header {
     text-align: center;
 }
+
 main {
     padding: 0px;
     text-align: center;
     min-height: calc(100vh - 180px);
 }
+
 a {
     all: unset;
- }
+}
+
 .location {
     color: black;
-    background-color: lightgray;
+    //background-color: lightgray;
+    background-color: rgb(234, 234, 234);
+    box-shadow: 10px 10px 13px rgba(50, 50, 50, 0.75);
     display: flex;
     justify-content: center;
+    padding: 15px;
 
     i {
         margin-right: 15px;
     }
 }
+
 .reservation {
     background-color: rgb(246, 246, 246);
     padding-top: 30px;
     padding-bottom: 30px;
 }
+
 button.explore-resto {
     color: white;
     background-color: #9356DC;
