--- a/sass/_fonctionnement.scss
+++ b/sass/_fonctionnement.scss
@@ -24,6 +24,7 @@
     margin-bottom: 20px;
     margin-left: 15px;
     transition: background-color 0.5s ease-in-out;
+    cursor: pointer;
 
     span {
         display: block;
