--- a/sass/_restaurant.scss
+++ b/sass/_restaurant.scss
@@ -22,6 +22,7 @@
         width: 335px;
         overflow: hidden;
         position: relative;
+        cursor: pointer;
 
         img {
             //border-radius: 20px 20px 0px 0px;
