--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,7 @@ h1 {
   margin-bottom: 20px;
   margin-left: 15px;
   transition: background-color 0.5s ease-in-out;
+  cursor: pointer;
 }
 .fonctionnement-box span {
   display: block;
@@ -134,6 +135,7 @@ h1 {
   width: 335px;
   overflow: hidden;
   position: relative;
+  cursor: pointer;
 }
 .restaurant .restaurant-box img {
   width: 100%;
@@ -297,6 +299,10 @@ main {
 
 a {
   all: unset;
+}
+
+button {
+  cursor: pointer;
 }
 
 .location {
