--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -34,6 +34,10 @@ a {
     all: unset;
 }
 
+button {
+    cursor: pointer;
+}
+
 .location {
     color: black;
     //background-color: lightgray;
