--- a/sass/_restaurant.scss
+++ b/sass/_restaurant.scss
@@ -1,5 +1,5 @@
 .restaurant {
-    background-color: lightgray;
+    background-color: rgb(246, 246, 246);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -17,12 +17,17 @@
 
     .restaurant-box {
         background-color: white;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
         border-radius: 20px;
         margin: 20px;
         width: 335px;
         overflow: hidden;
         position: relative;
         cursor: pointer;
+
+        &:hover {
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+        }
 
         img {
             //border-radius: 20px 20px 0px 0px;
@@ -48,6 +53,7 @@
     span {
         background-color: rgb(153, 226, 208);
         color: rgb(0, 135, 102);
+        font-weight: bolder;
         padding: 10px;
         position: absolute;
         top: 15px;
