--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,6 +2,7 @@
 footer {
     color: white;
     background-color: black;
+    padding: 25px;
     padding-bottom: 20px;
 
     h2 {
@@ -19,13 +20,15 @@ footer {
         margin-left: 15px;
         display: flex;
     }
+
     .footer-container {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         max-width: 1000px;
-        
-        >p, .footerLineWithIcon {
+
+        >p,
+        .footerLineWithIcon {
             min-width: 330px;
             margin-top: 10px;
         }
