--- a/sass/restaurants-pages.scss
+++ b/sass/restaurants-pages.scss
@@ -25,6 +25,8 @@ button {
 }
 
 main {
+    background-color: rgb(246, 246, 246);
+
     >img {
         width: 100%;
         height: 260px;
@@ -80,14 +82,15 @@ main {
 
     button.command {
         color: white;
-        background-color: #9356DC;
         background: linear-gradient(-10deg, #9356DC 10%, hotpink 60%);
+        min-width: 150px;
         border: none;
-        border-radius: 15px;
+        border-radius: 25px;
         padding: 15px;
         margin-top: 30px;
         margin-inline: auto;
         display: block;
+        margin-bottom: 30px;
 
         &:hover {
             background-color: rec;
@@ -126,6 +129,11 @@ body {
     margin-bottom: 20px;
     animation: step-display 2s ease-in-out;
     cursor: pointer;
+
+    &:hover {
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+    }
+
 }
 
 .card-menu:nth-child(1) {
@@ -167,8 +175,7 @@ p {
     place-content: center;
     height: 70px;
     width: 50px;
-    background-color: red;
-    //background-color: rgb(153, 226, 208);
+    background-color: rgb(153, 226, 208);
     color: white;
 }
 
