--- a/css/restaurants-pages.css
+++ b/css/restaurants-pages.css
@@ -144,7 +144,7 @@ main .restaurant-card h2 {
   font-size: 80%;
   font-weight: 400;
   position: relative;
-  margin-bottom: 30px;
+  margin-bottom: 5px;
 }
 main .restaurant-card h2::after {
   content: "";
@@ -154,6 +154,13 @@ main .restaurant-card h2::after {
   bottom: -5px;
   left: 0;
   margin-top: 13px;
+}
+main .restaurant-card .rectangle {
+  height: 3px;
+  width: 40px;
+  background-color: rgb(153, 226, 208);
+  margin: 0px;
+  margin-bottom: 15px;
 }
 main button.command {
   color: white;
