--- a/sass/restaurants-pages.scss
+++ b/sass/restaurants-pages.scss
@@ -64,7 +64,7 @@ main {
             font-size: 80%;
             font-weight: 400;
             position: relative;
-            margin-bottom: 30px;
+            margin-bottom: 5px;
 
             &::after {
                 content: "";
@@ -76,8 +76,16 @@ main {
                 left: 0;
                 margin-top: 13px;
             }
+
         }
 
+        .rectangle {
+            height: 3px;
+            width: 40px;
+            background-color: rgb(153, 226, 208);
+            margin: 0px;
+            margin-bottom: 15px;
+        }
     }
 
     button.command {
