--- a/css/restaurants-pages.css
+++ b/css/restaurants-pages.css
@@ -91,6 +91,10 @@ footer .footer-container .footerLineWithIcon {
   color: rgb(246, 246, 246);
 }
 
+* {
+  outline: 1px solid red;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -231,7 +235,7 @@ body {
 
 .card-menu .card-content {
   flex-shrink: 0;
-  flex-basis: 442px;
+  flex-basis: 332px;
   overflow: hidden;
   transition: all 0.3s ease-out;
 }
@@ -240,6 +244,7 @@ body {
   justify-content: space-between;
 }
 .card-menu .card-content .under-dish b {
+  justify-content: right;
   padding-right: 20px;
 }
 
@@ -253,14 +258,14 @@ p {
   display: grid;
   place-content: center;
   height: 70px;
-  width: 50px;
+  width: 30px;
   background-color: rgb(153, 226, 208);
   color: white;
 }
 
 .card-menu .panel {
   flex-shrink: 0;
-  flex-basis: 80px;
+  flex-basis: 50px;
   transition: right 0.5s ease-in-out;
 }
 
@@ -271,7 +276,7 @@ p {
 }
 
 .card-menu:hover .card-content {
-  flex-basis: 250px;
+  flex-basis: 280px;
 }
 
 .card-menu:hover .panel i {
