--- a/sass/restaurants-pages.scss
+++ b/sass/restaurants-pages.scss
@@ -6,6 +6,10 @@
     color: rgb(246, 246, 246);
 }
 
+* {
+    outline: 1px solid red;
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -158,7 +162,7 @@ body {
 
 .card-menu .card-content {
     flex-shrink: 0;
-    flex-basis: 442px;
+    flex-basis: 332px;
     overflow: hidden;
     transition: all 0.3s ease-out;
 
@@ -167,6 +171,8 @@ body {
         justify-content: space-between;
 
         b {
+
+            justify-content: right;
             padding-right: 20px;
         }
     }
@@ -182,14 +188,14 @@ p {
     display: grid;
     place-content: center;
     height: 70px;
-    width: 50px;
+    width: 30px;
     background-color: rgb(153, 226, 208);
     color: white;
 }
 
 .card-menu .panel {
     flex-shrink: 0;
-    flex-basis: 80px;
+    flex-basis: 50px;
     transition: right 0.5s ease-in-out;
 }
 
@@ -200,7 +206,7 @@ p {
 }
 
 .card-menu:hover .card-content {
-    flex-basis: 250px;
+    flex-basis: 280px;
 }
 
 .card-menu:hover .panel i {
