--- a/css/restaurants-pages.css
+++ b/css/restaurants-pages.css
@@ -87,8 +87,33 @@ footer .footer-container .footerLineWithIcon {
   margin-top: 10px;
 }
 
+.btn-principal {
+  color: white;
+  background: linear-gradient(-10deg, rgb(162, 91, 219), rgb(233, 114, 218) 80%);
+  min-width: 150px;
+  border: none;
+  border-radius: 25px;
+  padding: 15px;
+  margin-top: 30px;
+  margin-inline: auto;
+  display: block;
+  margin-bottom: 30px;
+  box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.1);
+  transition: all 0.5s ease-in-out;
+}
+.btn-principal:hover {
+  background: linear-gradient(-10deg, rgb(201, 159, 236), rgb(240, 139, 226) 80%);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+}
+
 .rideau {
   color: rgb(246, 246, 246);
+}
+
+a {
+  display: block;
+  text-decoration: none;
+  color: inherit;
 }
 
 header {
@@ -161,21 +186,6 @@ main .restaurant-card .rectangle {
   background-color: rgb(153, 226, 208);
   margin: 0px;
   margin-bottom: 15px;
-}
-main button.command {
-  color: white;
-  background: linear-gradient(-10deg, rgb(162, 91, 219), rgb(233, 114, 218) 80%);
-  min-width: 150px;
-  border: none;
-  border-radius: 25px;
-  padding: 15px;
-  margin-top: 30px;
-  margin-inline: auto;
-  display: block;
-  margin-bottom: 30px;
-}
-main button.command:hover {
-  background-color: rec;
 }
 main .card-plat {
   border-radius: 10px;
