--- a/sass/_fonctionnement.scss
+++ b/sass/_fonctionnement.scss
@@ -1,6 +1,10 @@
 .fonctionnement {
     h2 {
         margin-bottom: 15px;
+        margin-top: 30px;
+        text-align: left;
+        width: 100%;
+        padding-left: 7%;
     }
 
     .container {
