--- a/sass/_tablette.scss
+++ b/sass/_tablette.scss
@@ -1,7 +1,19 @@
 @media screen and (min-width: 768px) {
     .fonctionnement {
+        h2 {
+            text-align: center;
+            padding-left: 0%;
+        }
+
         .fonctionnement-box {
             margin-inline: 15px;
+        }
+    }
+
+    .restaurant {
+        >h2 {
+            text-align: center;
+            padding-left: 0%;
         }
     }
 }
