--- a/sass/components/_favoris.scss
+++ b/sass/components/_favoris.scss
@@ -11,36 +11,38 @@
     width: 20px;
     height: 20px;
   }
-}
 
-.fa-regular.fa-heart {
-  z-index: 5;
-  transition: opacity 2s linear;
+  .fa-regular.fa-heart {
+    z-index: 5;
+    transition: opacity 2s linear;
+
+    &:hover {
+      opacity: 0;
+    }
+  }
+
+  .fa-square-full {
+    z-index: 3;
+  }
+
+  .fa-solid.fa-heart {
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    z-index: 1;
+    background-image: linear-gradient(#e66465, #9198e6);
+  }
+
+  .rideau {
+    color: white;
+    height: 15px;
+    transition: all 2s;
+    transition-timing-function: ease-in-out;
+  }
 
   &:hover {
-    opacity: 0;
+    .rideau {
+      top: -22px;
+    }
   }
-}
-
-.fa-square-full {
-  z-index: 3;
-}
-
-.fa-solid.fa-heart {
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  z-index: 1;
-  background-image: linear-gradient(#e66465, #9198e6);
-}
-
-.rideau {
-  color: white;
-  height: 15px;
-  transition: all 2s;
-  transition-timing-function: ease-in-out;
-}
-
-.favoris:hover .rideau {
-  top: -22px;
 }
